<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/generateLineupFragment">

    <fragment
        android:id="@+id/teamInfoFragment"
        android:name="com.example.myapplication.Controller.TeamInfoFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_team_info" />

    <fragment
        android:id="@+id/generateLineupFragment"
        android:name="com.example.myapplication.Controller.GenerateLineupFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_generate_lineup" />

    <fragment
        android:id="@+id/playersFragment"
        android:name="com.example.myapplication.Controller.PlayersFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_players" />
</navigation>
