<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    android:backgroundTint="#800E0C0C"
    android:backgroundTintMode="src_over"
    tools:context=".Controller.TeamInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_ek2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_background"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/teamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/teamName"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamLanguage"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manager" />

        <TextView
            android:id="@+id/manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamManager"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamName" />

        <TextView
            android:id="@+id/team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/team_string"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/colors_ek2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/box_background"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/colors">

        <TextView
            android:id="@+id/lineup_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamLineupConfig"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/layout__default_string"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineup_config" />

        <TextView
            android:id="@+id/kit_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kit_style__logo_string"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout" />

        <TextView
            android:id="@+id/font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font__monterrat_string"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kit_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_background"
        android:padding="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_ek2">

        <TextView
            android:id="@+id/colors_ek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colors_ek1_string"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/main__string"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colors_ek1" />

        <TextView
            android:id="@+id/secondary_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondary__string"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_" />

        <TextView
            android:id="@+id/font_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font__string"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondary_" />

        <ImageView
            android:id="@+id/mainColor"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/main_"
            app:layout_constraintStart_toEndOf="@+id/main_"
            app:layout_constraintTop_toTopOf="@+id/main_" />

        <ImageView
            android:id="@+id/fontColor"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/font_"
            app:layout_constraintStart_toEndOf="@+id/font_"
            app:layout_constraintTop_toTopOf="@+id/font_" />

        <ImageView
            android:id="@+id/secondaryColor"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/secondary_"
            android:background="@color/white"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/secondary_"
            app:layout_constraintStart_toEndOf="@+id/secondary_"
            app:layout_constraintTop_toTopOf="@+id/secondary_" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background_ek1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/background_ek3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/box_background"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_ek3"
        app:layout_constraintVertical_bias="0.234">


        <ImageView
            android:id="@+id/teamBackground"
            android:layout_width="271dp"
            android:layout_height="130dp"
            android:layout_below="@+id/background_ek2"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/bild_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_ek2"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/background_ek2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:text="@string/background_ek2_string"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/teamBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/box_background"
        android:padding="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_ek3">

        <ImageView
            android:id="@+id/teamLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/logo_ek1"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baitmen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_ek1" />

        <TextView
            android:id="@+id/logo_ek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_ek1_string"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background_ek3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_background"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/colors_ek2">

        <TextView
            android:id="@+id/teamKitTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kit_string"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/teamKit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/teamKitTxt"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/tarwfootball_kits_br_plainstripe_removebg_preview_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamKitTxt"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottonnav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
